
        CHANGES IN spatstat.explore VERSION 3.0-6.001

OVERVIEW

    o Minor bug fix.

BUG FIXES

    o plot.fv
    Sometimes gave an obscure warning about 'rebound.owin',
    when 'xlim' or 'ylim' was given.
    Fixed.

        CHANGES IN spatstat.explore VERSION 3.0-6

OVERVIEW

    o Internal improvements and bug fixes.

        CHANGES IN spatstat.explore VERSION 3.0-5

OVERVIEW

    o Bug fix in pcf.

    o We thank Maximilian Hesselbarth for contributions.
    
BUG FIXES

    o pcf.ppp
    Estimates were incorrectly scaled (they were incorrectly multiplied
    by the area of the window.) Spotted by Maximilian Hesselbarth.
    Bug introduced in spatstat.explore 3.0-0.
    Fixed.
    

        CHANGES IN spatstat.explore VERSION 3.0-4

OVERVIEW

    o Bug fix in Kest in a very special case.

    o We thank 'Marjolein9' for contributions.
    
BUG FIXES

    o Kest
    Isotropic edge correction weight was computed incorrectly
    for a data point lying exactly on a corner of a rectangular window.
    Spotted by GitHub contributor 'Marjolein9'.
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.0-3

OVERVIEW

    o Tweaks to placate package checker.


        CHANGES IN spatstat.explore VERSION 3.0-2

OVERVIEW

    o Tweaks to placate package checker.


        CHANGES IN spatstat.explore VERSION 3.0-1

OVERVIEW

    o Tweaks to placate package checker.


        CHANGES IN spatstat.explore VERSION 3.0-0

OVERVIEW

    o New package

    o We thank Marie-Colette van Lieshout and Daniel Manrique-Castano
    for contributions.
    
    o Periodic edge correction for K function.

    o Changed denominator in K function and pair correlation function.
    
    o Bandwidth selection for adaptive kernel estimation of intensity.

    o U-shaped curves in 'rhohat'.

    o Radial cumulative integral of an image.
    
    o Minor improvements.

NEW FUNCTIONS

    o bw.CvL.adaptive
    Bandwidth selection for adaptive kernel estimation of intensity.
