@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.0-6.001
-Date: 2023-02-07
+Version: 3.0-6.002
+Date: 2023-02-16
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
