@@ -6,7 +6,7 @@
   smoothing kernel.
 }
 \usage{
-  kernel.moment(m, r, kernel = "gaussian")
+  kernel.moment(m, r, kernel = "gaussian", mean=0, sd=1/kernel.factor(kernel))
 }
 \arguments{
   \item{m}{
@@ -28,6 +28,10 @@
     \code{"cosine"} and \code{"optcosine"}.
     (Partial matching is used).
   }
+  \item{mean,sd}{
+    Optional numerical values giving the mean and standard deviation
+    of the kernel.
+  }
 }
 \details{
   Kernel estimation of a probability density in one dimension
@@ -36,7 +40,7 @@
   For more information about these kernels,
   see \code{\link[stats]{density.default}}. 
 
-  The function \code{kernel.moment} computes the partial integral 
+  The function \code{kernel.moment} computes the integral 
   \deqn{
     \int_{-\infty}^r t^m k(t) dt
   }{
@@ -44,9 +48,14 @@
   }
   where \eqn{k(t)} is the selected kernel, \eqn{r} is the upper limit of
   integration, and \eqn{m} is the exponent or order.
-  Here \eqn{k(t)} is the \bold{standard form} of the kernel,
+
+  Note that, if \code{mean} and \code{sd} are not specified, the
+  calculations assume that \eqn{k(t)} is the \bold{standard form} of the kernel,
   which has support \eqn{[-1,1]} and
   standard deviation \eqn{sigma = 1/c} where \code{c = kernel.factor(kernel)}.
+
+  The code uses the explicit analytic expressions when
+  \code{m = 0, 1, 2} and numerical integration otherwise.
 }
 \value{
   A single number, or a numeric vector of the same length as \code{r}.
@@ -55,6 +64,7 @@
   \code{\link[stats]{density.default}},
   \code{\link{dkernel}},
   \code{\link{kernel.factor}},
+  \code{\link{kernel.squint}}
 }
 \examples{
    kernel.moment(1, 0.1, "epa")
